force-app/main/default/objects/Anand_Adyar_Bhavan__c/Anand_Adyar_Bhavan__c.object-meta.xml
<CustomObject>
    <description>Pure Veg</description>
    <label>Anand Adyar Bhavan</label>
    <nameField>
        <label>Anand Adyar Bhavan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anand Adyar Bhavans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>