force-app/main/default/objects/Anand_Adyar_Bhavan__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>