force-app/main/default/objects/Anand_Adyar_Bhavan__c/fields/Vegetable_Biriyani__c.field-meta.xml
<CustomField>
    <fullName>Vegetable_Biriyani__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Loaded with Vegetables</description>
    <label>Vegetable Biriyani</label>
    <type>Checkbox</type>
</CustomField>